@@ -15,7 +15,11 @@ module Net::HTTPHeader
     return unless initheader
     initheader.each do |key, value|
       warn "net/http: warning: duplicated HTTP header: #{key}" if key?(key) and $VERBOSE
-      @header[key.downcase] = [value.strip]
+      if value.nil?
+        warn "net/http: warning: nil HTTP header: #{key}" if $VERBOSE
+      else
+        @header[key.downcase] = [value.strip]
+      end
     end
   end
 
@@ -450,4 +454,3 @@ module Net::HTTPHeader
   private :tokens
 
 end
-
